[package]
name = "imguni"
version = "0.2.0"
authors = ["Luca Rinaldi <lucarin@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
image = "0.23"
font-kit = "0.6"
clap = "2.33"
rand = "0.7"
pathfinder_geometry = "0.5"
